# travian_tracker

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: alliances.py  config.py  crud.py  database.py  logging.py  main.py  models.py  players.py  villages.py
app/routes/: alliances.py  players.py  processes.py  villages.py
scripts/: download_and_ingest.py  process_raw_imports.py  scheduler.py
